<resources>
    <string name="app_name">Insurance Premium Calculator</string>
    <string name="text_age">Age</string>
    <string name="text_Gender">Gender</string>
    <string-array name="age_List">
        <item>Less than 17</item>
        <item>17 to 25</item>
        <item>26 to 30</item>
        <item>31 to 40</item>
        <item>41 to 55</item>
        <item>More than 55</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="checkbox_Smoker">Smoker</string>
    <string name="btn_clr">Clear</string>
    <string name="btn_cal">Calculate</string>
    <string name="insurance_premium">Insurance Premium :</string>
</resources>
